Added CORS support and fixed patching with zero tags
